--- a/apps/main.glade
+++ b/apps/main.glade
@@ -5,7 +5,16 @@
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
     <child type="titlebar">
-      <placeholder/>
+      <object class="GtkHeaderBar" id="headerBar">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="title" translatable="yes">GTK Demo</property>
+        <property name="subtitle" translatable="yes">Sandbox for GTK+ Applications</property>
+        <property name="show_close_button">True</property>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
     </child>
     <child>
       <object class="GtkBox">
