--- a/apps/main.glade
+++ b/apps/main.glade
@@ -105,7 +105,20 @@
               <placeholder/>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkComboBoxText" id="optSelector">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <items>
+                  <item id="0" translatable="yes">0%</item>
+                  <item id="1" translatable="yes">50%</item>
+                  <item id="2" translatable="yes">100%</item>
+                </items>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
             </child>
           </object>
           <packing>
