--- a/apps/main.glade
+++ b/apps/main.glade
@@ -74,25 +74,56 @@
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
-          <object class="GtkBox" id="menuBar">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="halign">start</property>
-            <property name="margin_top">8</property>
+            <property name="orientation">vertical</property>
             <child>
-              <object class="GtkMenuButton">
+              <object class="GtkBox" id="menuBar">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="focus_on_click">False</property>
-                <property name="receives_default">True</property>
-                <property name="direction">right</property>
-                <property name="popover">menuPopover</property>
+                <property name="can_focus">False</property>
+                <property name="halign">start</property>
+                <property name="margin_bottom">8</property>
                 <child>
-                  <object class="GtkImage">
+                  <object class="GtkMenuButton">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="focus_on_click">False</property>
+                    <property name="receives_default">True</property>
+                    <property name="direction">right</property>
+                    <property name="popover">menuPopover</property>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="icon_name">open-menu</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText" id="optSelector">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="icon_name">open-menu</property>
+                    <items>
+                      <item id="0" translatable="yes">0%</item>
+                      <item id="1" translatable="yes">50%</item>
+                      <item id="2" translatable="yes">100%</item>
+                    </items>
                   </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
                 </child>
               </object>
               <packing>
@@ -102,22 +133,14 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <object class="GtkComboBoxText" id="optSelector">
+              <object class="GtkSeparator">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <items>
-                  <item id="0" translatable="yes">0%</item>
-                  <item id="1" translatable="yes">50%</item>
-                  <item id="2" translatable="yes">100%</item>
-                </items>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
